# RPi-vespai-C2

./: .env.template  .gitattributes  .gitignore  LICENSE  README.md  install_startup_service.sh  pyproject.toml  remove_startup_service.sh  requirements-venv-py.txt  run_tests.py  start_vespai.sh  start_vespai_web.sh  stop_vespai.sh  vespai-web.service  vespai.py
docs/: Additional Resources.md  Configuration-Guide.md  INSTALL.md  Model-Info.md  System requirements.md  TROUBLESHOOTING.md  ToDo.md  USAGE.md  training-report-YOLOV26-asianhornet-20260313-173325.html
models/L2_2026-03-25_13-42-18_best_ncnn_model/: metadata.yaml  model.ncnn.hash  model.ncnn.param  model_ncnn.py
monitor/debug_color_probe/: probe_report_20260326_132708.json
notebooks/: main copy.ipynb  main.ipynb  main_converted.ipynb
scripts/: color_pipeline_probe.py  quick-start.bat  quick-start.sh  raspberry-pi-setup.sh  scan_camera_devices.py  setup.py  validate_onnx_export.py
src/vespai/: __init__.py  main.py
src/vespai/core/: __init__.py  config.py  detection.py
src/vespai/push_notification/: __init__.py  pushover.py
src/vespai/sms/: __init__.py  lox24.py
src/vespai/web/: __init__.py  routes.py
src/vespai/web/templates/: dashboard.html  frame.html  legacy_dashboard.html
tests/integration/: test_application.py
tests/unit/: __init__.py  test_detection.py  test_export_validation.py  test_sms.py
tests/web/: __init__.py  test_routes.py
training_logs/: Master-YOLOV26-Training-KPIs.csv  Master-YOLOV26-Training-Stats.csv  training-report-YOLOV26-asianhornet2-20260325-134152.html
(+2 files in other folders)
