[project]
name = "vespai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ncnn>=1.0.20260114",
    "onnx>=1.20.1",
    "onnxsim>=0.6.2",
    "pip>=26.0.1",
    "python-dotenv>=1.2.2",
    "ultralytics>=8.4.22",
]
